Update Buckeye and Goodyear pages: add unique city-specific content, FAQs, and fix styling

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -253,42 +253,32 @@ eleventyNavigation:
       </div>
       <ul class="cs-card-group">
         <li class="cs-item">
-          <picture class="cs-picture">
-            <!--Mobile Image-->
-            <source
-                  media="(max-width: 600px)"
-                  srcset="/assets/images/goodyear-m.webp">
-            <!--Tablet and above Image-->
-            <source
-                  media="(min-width: 601px)"
-                  srcset="/assets/images/pm-goodyear.webp">
-            <img
-                  loading="lazy"
-                  decoding="async"
-                  src="/assets/images/pm-goodyear.webp"
-                  alt="Goodyear"
-                  width="413"
-                  height="240"
-                  aria-hidden="true">
-          </picture>
-          <div class="cs-info">
-            <h3 class="cs-h3">Goodyear</h3>
-            <p class="cs-item-text">
-                A thriving, family-friendly community with rapid growth and great investment potential.
-            </p>
-            <a href="/goodyear-property-management/" class="cs-link">
-              Read More
+          <a href="/goodyear-property-management/" class="cs-item-link">
+            <picture class="cs-picture">
+              <!--Mobile Image-->
+              <source
+                    media="(max-width: 600px)"
+                    srcset="/assets/images/goodyear-m.webp">
+              <!--Tablet and above Image-->
+              <source
+                    media="(min-width: 601px)"
+                    srcset="/assets/images/pm-goodyear.webp">
               <img
-                    class="cs-arrow"
                     loading="lazy"
                     decoding="async"
-                    src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow-right.svg"
-                    alt="icon"
-                    width="20"
-                    height="20"
+                    src="/assets/images/pm-goodyear.webp"
+                    alt="Goodyear"
+                    width="413"
+                    height="240"
                     aria-hidden="true">
-            </a>
-          </div>
+            </picture>
+            <div class="cs-info">
+              <h3 class="cs-h3">Goodyear</h3>
+              <p class="cs-item-text">
+                  A thriving, family-friendly community with rapid growth and great investment potential.
+              </p>
+            </div>
+          </a>
         </li>
         <li class="cs-item">
             <picture class="cs-picture">
