--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -1,6 +1,6 @@
 ---
-title: 'Property Management Services in Goodyear'
-description: 'Property management services in Goodyear & West Valley. Full-service leasing, inspections, maintenance, and responsive local experts for your rental property.'
+title: 'Property Management Services in Goodyear | Experienced Local Managers'
+description: 'Experienced property management in Goodyear, AZ. Specializing in Estrella Mountain Ranch, Palm Valley, and established neighborhoods. Trusted local property managers serving mature communities.'
 preloadImg: '/assets/images/pm-goodyear.webp'
 permalink: 'goodyear-property-management/'
 ---
@@ -20,9 +20,9 @@ permalink: 'goodyear-property-management/'
 
 <section id="hero-81">
     <div class="cs-container">
-        <h1 class="cs-title">Goodyear Property Management Made Simple</h1>
+        <h1 class="cs-title">Expert Property Management for Goodyear's Established Communities</h1>
         <p class="cs-text">
-Full-service leasing, thorough inspections, and responsive local experts for your Goodyear rental property. Trusted by 450+ property owners in the West Valley.
+Protect and maximize your rental investment in Goodyear's mature, family-friendly neighborhoods. Specialized property management for Estrella Mountain Ranch, Palm Valley, and all Goodyear communities. Trusted by 450+ property owners who value proven, reliable service.
         </p>
         <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
     </div>
@@ -56,7 +56,7 @@ Regular interior and exterior inspections to protect your investment and keep te
             </picture>
             <h2 class="cs-title">Expert Leasing & Tenant Screening</h2>
             <p class="cs-text">
-We market your rental on over 50 websites, screen tenants thoroughly, and handle all leasing paperwork. Our average time to lease is 30 days. 
+We market your rental on over 50 websites, screen tenants thoroughly, and handle all leasing paperwork. Our average time to lease is 30 days.
             </p>
         </li>
         <li class="cs-item">
@@ -74,7 +74,7 @@ As a family-owned business for 28+ years, we pride ourselves on trust, integrity
             </picture>
             <h2 class="cs-title">Local Goodyear Experts</h2>
             <p class="cs-text">
-Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West Valley neighborhoods. We are very in touch with the current market .
+Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West Valley neighborhoods. We are very in touch with the current market.
             </p>
         </li>
     </ul>
@@ -103,7 +103,7 @@ Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West
 				<span class="cs-topper">How We Help</span>
 				<h2 class="cs-title">What's Included With Our Property Management Services</h2>
                 <p class="cs-text">
-                    Looking for the best property management company in Goodyear, AZ? We're the local experts who understand your neighborhood and your investment goals. Here's why you should choose us to be your Goodyear property manager:
+                    Goodyear offers a unique blend of established, desirable communities and steady rental demand. With master-planned communities like Estrella Mountain Ranch featuring golf courses and resort amenities, and family-friendly Palm Valley, Goodyear attracts quality long-term tenants. As your Goodyear property management partner, we understand the nuances of managing properties in these mature, HOA-governed communities. Here's what sets us apart for Goodyear property owners:
                 </p>
             <ul id="list-1405" class="cs-ul">
                 <li class="cs-li">
@@ -156,7 +156,7 @@ Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West
 			<div class="cs-flex">
 				<h3 class="cs-h3">28+ Years of Experience</h3>
 				<p class="cs-item-text">
-                    Trusted, experienced property managers serving Goodyear and the West Valley.
+                    We've managed Goodyear properties for decades, understanding the unique needs of established communities and long-term property owners.
 				</p>
 			</div>
 		</li>
@@ -165,7 +165,7 @@ Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West
 			<div class="cs-flex">
 				<h3 class="cs-h3">450 Properties Managed</h3>
 				<p class="cs-item-text">
-                    A proven track record of managing hundreds of rentals in Goodyear, Estrella Mountain Ranch, and the West Valley.
+                    Successfully managing properties across Goodyear's established neighborhoods, from Estrella Mountain Ranch to Palm Valley and beyond.
 				</p>
 			</div>
 		</li>
@@ -192,7 +192,7 @@ Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West
             <span class="cs-topper">Why clients trust us</span>
             <h2 class="cs-title">Words From Our Customers</h2>
 <p class="cs-text">
-Property owners in Goodyear and the West Valley trust our property management team for responsive communication, local market expertise, and consistent results. Read what our clients say about our leasing, maintenance, and personal attention.
+Goodyear property owners trust us to protect their investments in established communities like Estrella Mountain Ranch and Palm Valley. Our expertise in managing properties in mature neighborhoods with HOAs, golf courses, and resort amenities helps owners maintain property values and attract quality tenants. Read what our clients say about our specialized Goodyear property management approach.
 </p>
 
         </div>
@@ -235,9 +235,9 @@ I can't imagine another company who could be more responsive and communicative.
 <section id="cs-contact-486">
     <div class="cs-container">
         <div class="cs-content">
-            <h2 class="cs-title">Looking for the best property management company in <span class="cs-color">Goodyear, AZ?</span></h2>
+            <h2 class="cs-title">Protect Your <span class="cs-color">Goodyear</span> Rental Investment</h2>
             <p class="cs-text">
-Interested in our property management services or want to discuss your rental property in Goodyear or the West Valley? Fill out the form and our team will reach out to answer your questions and explain how we can help maximize your investment.
+Goodyear's established communities like Estrella Mountain Ranch and Palm Valley offer stable rental markets with quality tenants seeking long-term housing. Whether you own a single-family home, townhome, or condominium in these premier neighborhoods, you need a property manager who understands HOA requirements, community amenities, and the expectations of tenants in these mature communities. Let's discuss how we can protect and maximize your Goodyear investment.
             </p>
             <span class="cs-heading">Prefer to speak with us directly?</span>
             <a href="tel:623-262-8584" class="cs-link">Phone: (623) 248-1929</a>
@@ -276,6 +276,82 @@ Interested in our property management services or want to discuss your rental pr
              <div data-netlify-recaptcha="true"></div>
             <button class="cs-button-solid cs-submit" type="submit">Request Information</button>
         </form>
+    </div>
+</section>
+
+<!-- ============================================ -->
+<!--              City-Specific Content            -->
+<!-- ============================================ -->
+
+<section id="city-content-goodyear">
+    <div class="cs-container">
+        <div class="cs-content">
+            <h2 class="cs-title">Why Goodyear Is an Ideal Rental Market</h2>
+            
+            <h3 class="cs-h3">Established, Desirable Communities</h3>
+            <p class="cs-text">
+                Goodyear is home to some of the West Valley's most sought-after master-planned communities. Estrella Mountain Ranch features 18-hole golf courses, resort-style amenities, and scenic mountain views. Palm Valley offers family-friendly neighborhoods with excellent schools and community parks. These mature communities attract quality tenants seeking stability and quality of life, resulting in longer tenancies and better property care.
+            </p>
+
+            <h3 class="cs-h3">Stable Rental Demand from Quality Tenants</h3>
+            <p class="cs-text">
+                Goodyear's reputation as a family-friendly city with strong schools, safe neighborhoods, and established amenities draws tenants who prioritize long-term stability over short-term rentals. This creates a rental market characterized by reliable, responsible tenants willing to pay premium rates for well-maintained properties in desirable communities. Average tenant stays exceed two years.
+            </p>
+
+            <h3 class="cs-h3">Mature Infrastructure & Established Amenities</h3>
+            <p class="cs-text">
+                Unlike rapidly growing cities, Goodyear's infrastructure is well-established. Shopping centers, restaurants, medical facilities, and entertainment venues are mature and conveniently located. This stability reduces tenant turnover and appeals to renters seeking established, convenient communities rather than areas still under development.
+            </p>
+
+            <h3 class="cs-h3">HOA Expertise for Master-Planned Communities</h3>
+            <p class="cs-text">
+                Many Goodyear properties, especially in Estrella Mountain Ranch and Palm Valley, are part of active HOAs with specific rules and maintenance requirements. Our experience managing properties in these communities ensures compliance with HOA guidelines, coordination with HOA boards, and proper handling of assessments and community amenities that enhance property value.
+            </p>
+        </div>
+    </div>
+</section>
+
+<!-- ============================================ -->
+<!--                    FAQ Section                -->
+<!-- ============================================ -->
+
+<section id="faq-goodyear">
+    <div class="cs-container">
+        <div class="cs-content">
+            <h2 class="cs-title">Frequently Asked Questions About Goodyear Property Management</h2>
+        </div>
+        <ul class="cs-faq-list">
+            <li class="cs-faq-item">
+                <h3 class="cs-faq-title">What makes Goodyear different from other Phoenix-area rental markets?</h3>
+                <p class="cs-faq-text">
+                    Goodyear offers established, mature communities with stable rental demand from quality long-term tenants. Master-planned communities like Estrella Mountain Ranch and Palm Valley feature resort-style amenities, golf courses, and strong HOAs that attract families and professionals seeking stability rather than temporary housing. This creates lower turnover and more reliable rental income.
+                </p>
+            </li>
+            <li class="cs-faq-item">
+                <h3 class="cs-faq-title">How do you handle HOA requirements in Estrella Mountain Ranch and Palm Valley?</h3>
+                <p class="cs-faq-text">
+                    We have extensive experience managing properties in Goodyear's HOA-governed communities. We ensure tenant compliance with community rules, coordinate with HOA boards for approvals and maintenance, handle HOA assessments properly, and leverage community amenities in our marketing to attract tenants who value these features.
+                </p>
+            </li>
+            <li class="cs-faq-item">
+                <h3 class="cs-faq-title">What rental rates can I expect in Goodyear?</h3>
+                <p class="cs-faq-text">
+                    Rental rates in Goodyear vary significantly by community. Properties in Estrella Mountain Ranch, with its golf courses and resort amenities, typically command premium rates. Palm Valley offers excellent value for families seeking quality schools and neighborhoods. We provide detailed market analysis for your specific property location and community to ensure competitive yet profitable pricing.
+                </p>
+            </li>
+            <li class="cs-faq-item">
+                <h3 class="cs-faq-title">How quickly do properties rent in Goodyear?</h3>
+                <p class="cs-faq-text">
+                    Well-maintained properties in desirable Goodyear communities typically lease within 30 days. However, we prioritize tenant quality over speed, targeting long-term renters who value established neighborhoods. This approach results in longer tenancies (2+ years average) and better property care, ultimately maximizing your return on investment.
+                </p>
+            </li>
+            <li class="cs-faq-item">
+                <h3 class="cs-faq-title">What type of tenants do Goodyear properties attract?</h3>
+                <p class="cs-faq-text">
+                    Goodyear attracts quality tenants including families seeking excellent schools, professionals wanting convenient access to Phoenix with a suburban lifestyle, and retirees drawn to Estrella Mountain Ranch's resort amenities. These tenant demographics prioritize long-term housing, property care, and community involvement—resulting in more reliable rental income and property preservation.
+                </p>
+            </li>
+        </ul>
     </div>
 </section>
                                                                         
