Update city property management pages to use pm- prefixed images and reduce hero overlay opacity

--- a/src/content/pages/buckeye-property-management.html
+++ b/src/content/pages/buckeye-property-management.html
@@ -287,25 +287,33 @@ Buckeye's real estate market is exploding with opportunity. With the city's popu
         <div class="cs-content">
             <h2 class="cs-title">Why Invest in Buckeye Rental Properties?</h2>
             
-            <h3 class="cs-h3">Arizona's Fastest-Growing City</h3>
-            <p class="cs-text">
-                Buckeye has consistently ranked among the fastest-growing cities in America, with population growth exceeding 15% annually. This rapid expansion creates exceptional rental opportunities, as thousands of new residents arrive each year looking for quality housing. The city's strategic location—just 35 miles west of Phoenix—offers residents access to major employers while enjoying a more affordable cost of living.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">Arizona's Fastest-Growing City</h3>
+                <p class="cs-text">
+                    Buckeye has consistently ranked among the fastest-growing cities in America, with population growth exceeding 15% annually. This rapid expansion creates exceptional rental opportunities, as thousands of new residents arrive each year looking for quality housing. The city's strategic location—just 35 miles west of Phoenix—offers residents access to major employers while enjoying a more affordable cost of living.
+                </p>
+            </div>
 
-            <h3 class="cs-h3">Master-Planned Communities Driving Demand</h3>
-            <p class="cs-text">
-                Buckeye's premier neighborhoods like Verrado, Sundance, and Festival Ranch are master-planned communities with exceptional amenities. These areas attract families, professionals, and retirees seeking quality living. As a Buckeye property manager, we understand the unique appeal of each community and how to market your property effectively to the right tenants.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">Master-Planned Communities Driving Demand</h3>
+                <p class="cs-text">
+                    Buckeye's premier neighborhoods like Verrado, Sundance, and Festival Ranch are master-planned communities with exceptional amenities. These areas attract families, professionals, and retirees seeking quality living. As a Buckeye property manager, we understand the unique appeal of each community and how to market your property effectively to the right tenants.
+                </p>
+            </div>
 
-            <h3 class="cs-h3">Strong Rental Market Fundamentals</h3>
-            <p class="cs-text">
-                Buckeye's rental market benefits from multiple growth drivers: expanding employment opportunities, excellent school districts, and ongoing infrastructure development. The city's focus on residential development means rental properties typically experience lower vacancy rates and faster tenant placement compared to more established markets.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">Strong Rental Market Fundamentals</h3>
+                <p class="cs-text">
+                    Buckeye's rental market benefits from multiple growth drivers: expanding employment opportunities, excellent school districts, and ongoing infrastructure development. The city's focus on residential development means rental properties typically experience lower vacancy rates and faster tenant placement compared to more established markets.
+                </p>
+            </div>
 
-            <h3 class="cs-h3">New Construction & Investment Opportunities</h3>
-            <p class="cs-text">
-                With thousands of new homes being built annually, Buckeye offers both new construction rentals and established property investment opportunities. Our team helps property owners navigate the unique aspects of managing new construction rentals, from warranty coordination to tenant education on new home systems.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">New Construction & Investment Opportunities</h3>
+                <p class="cs-text">
+                    With thousands of new homes being built annually, Buckeye offers both new construction rentals and established property investment opportunities. Our team helps property owners navigate the unique aspects of managing new construction rentals, from warranty coordination to tenant education on new home systems.
+                </p>
+            </div>
         </div>
     </div>
 </section>
