--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -288,25 +288,33 @@ Goodyear's established communities like Estrella Mountain Ranch and Palm Valley 
         <div class="cs-content">
             <h2 class="cs-title">Why Goodyear Is an Ideal Rental Market</h2>
             
-            <h3 class="cs-h3">Established, Desirable Communities</h3>
-            <p class="cs-text">
-                Goodyear is home to some of the West Valley's most sought-after master-planned communities. Estrella Mountain Ranch features 18-hole golf courses, resort-style amenities, and scenic mountain views. Palm Valley offers family-friendly neighborhoods with excellent schools and community parks. These mature communities attract quality tenants seeking stability and quality of life, resulting in longer tenancies and better property care.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">Established, Desirable Communities</h3>
+                <p class="cs-text">
+                    Goodyear is home to some of the West Valley's most sought-after master-planned communities. Estrella Mountain Ranch features 18-hole golf courses, resort-style amenities, and scenic mountain views. Palm Valley offers family-friendly neighborhoods with excellent schools and community parks. These mature communities attract quality tenants seeking stability and quality of life, resulting in longer tenancies and better property care.
+                </p>
+            </div>
 
-            <h3 class="cs-h3">Stable Rental Demand from Quality Tenants</h3>
-            <p class="cs-text">
-                Goodyear's reputation as a family-friendly city with strong schools, safe neighborhoods, and established amenities draws tenants who prioritize long-term stability over short-term rentals. This creates a rental market characterized by reliable, responsible tenants willing to pay premium rates for well-maintained properties in desirable communities. Average tenant stays exceed two years.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">Stable Rental Demand from Quality Tenants</h3>
+                <p class="cs-text">
+                    Goodyear's reputation as a family-friendly city with strong schools, safe neighborhoods, and established amenities draws tenants who prioritize long-term stability over short-term rentals. This creates a rental market characterized by reliable, responsible tenants willing to pay premium rates for well-maintained properties in desirable communities. Average tenant stays exceed two years.
+                </p>
+            </div>
 
-            <h3 class="cs-h3">Mature Infrastructure & Established Amenities</h3>
-            <p class="cs-text">
-                Unlike rapidly growing cities, Goodyear's infrastructure is well-established. Shopping centers, restaurants, medical facilities, and entertainment venues are mature and conveniently located. This stability reduces tenant turnover and appeals to renters seeking established, convenient communities rather than areas still under development.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">Mature Infrastructure & Established Amenities</h3>
+                <p class="cs-text">
+                    Unlike rapidly growing cities, Goodyear's infrastructure is well-established. Shopping centers, restaurants, medical facilities, and entertainment venues are mature and conveniently located. This stability reduces tenant turnover and appeals to renters seeking established, convenient communities rather than areas still under development.
+                </p>
+            </div>
 
-            <h3 class="cs-h3">HOA Expertise for Master-Planned Communities</h3>
-            <p class="cs-text">
-                Many Goodyear properties, especially in Estrella Mountain Ranch and Palm Valley, are part of active HOAs with specific rules and maintenance requirements. Our experience managing properties in these communities ensures compliance with HOA guidelines, coordination with HOA boards, and proper handling of assessments and community amenities that enhance property value.
-            </p>
+            <div class="cs-content-item">
+                <h3 class="cs-h3">HOA Expertise for Master-Planned Communities</h3>
+                <p class="cs-text">
+                    Many Goodyear properties, especially in Estrella Mountain Ranch and Palm Valley, are part of active HOAs with specific rules and maintenance requirements. Our experience managing properties in these communities ensures compliance with HOA guidelines, coordination with HOA boards, and proper handling of assessments and community amenities that enhance property value.
+                </p>
+            </div>
         </div>
     </div>
 </section>
