--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -49,29 +49,29 @@ eleventyNavigation:
                 <li><a href="/about">About Us</a></li>
                 <li><a href="/rentals">Apply for a Rental</a></li>
                 <li><a href="/contact">Ask a Property Management Question</a></li>
-                <li><a href="#">Avondale, AZ</a></li>
-                <li><a href="#">Buckeye, AZ</a></li>
+                <li><a href="/avondale-property-management/">Avondale, AZ</a></li>
+                <li><a href="/buckeye-property-management/">Buckeye, AZ</a></li>
                 <li><a href="#">Buy A Home</a></li>
-                <li><a href="#">Chandler, AZ</a></li>
+                <li><a href="/chandler-property-management/">Chandler, AZ</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                 <li><a href="/rentals">Current Rentals</a></li>
-                <li><a href="#">Gilbert, AZ</a></li>
-                <li><a href="#">Glendale, AZ</a></li>
+                <li><a href="/gilbert-property-management/">Gilbert, AZ</a></li>
+                <li><a href="/glendale-property-management/">Glendale, AZ</a></li>
                 <li><a href="/goodyear-property-management/">Goodyear, AZ</a></li>
                 <li><a href="/rentals">Houses for Rent</a></li>
-                <li><a href="#">Litchfield Park, AZ</a></li>
-                <li><a href="#">Mesa, AZ</a></li>
+                <li><a href="/litchfield-park-property-management/">Litchfield Park, AZ</a></li>
+                <li><a href="/mesa-property-management/">Mesa, AZ</a></li>
                 <li><a href="https://sunseeker.appfolio.com/oportal/users/log_in" target="_blank">Owner Login</a></li>
                 <li><a href="/owners">Owners Page</a></li>
                 <li><a href="https://www.paypal.com/ncp/payment/9RMEJ74HRU9LL" target="_blank">Pay Application Fees</a></li>
-                <li><a href="#">Peoria, AZ</a></li>
-                <li><a href="#">Phoenix, AZ</a></li>
+                <li><a href="/peoria-property-management/">Peoria, AZ</a></li>
+                <li><a href="/phoenix-property-management/">Phoenix, AZ</a></li>
                 <li><a href="/reviews">Reviews</a></li>
                 <li><a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank">Reviews on Google!</a></li>
                 <li><a href="https://calendly.com/sunseeker-rentals/property-management-call?month=2025-04" target="_blank">Schedule a phone call</a></li>
                 <li><a href="#">Sell Your Home</a></li>
-                <li><a href="#">Surprise, AZ</a></li>
-                <li><a href="#">Tempe, AZ</a></li>
+                <li><a href="/surprise-property-management/">Surprise, AZ</a></li>
+                <li><a href="/tempe-property-management/">Tempe, AZ</a></li>
                 <li><a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank">Tenant Portal</a></li>
                 <li><a href="/tenants">Tenants Page</a></li>
            <!--     <li><a href="/utility-info">Utility Info</a></li> -->
