Update city pages: fix Goodyear header, add cross-linking section, remove orange underline, update Google Ads strategy with West Valley focus, add data collection guide

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -20,7 +20,7 @@ permalink: 'goodyear-property-management/'
 
 <section id="hero-81">
     <div class="cs-container">
-        <h1 class="cs-title">Expert Property Management for Goodyear's Established Communities</h1>
+        <h1 class="cs-title">Goodyear Property Management | Expert Local Managers | 28+ Years of Experience</h1>
         <p class="cs-text">
 Protect and maximize your rental investment in Goodyear's mature, family-friendly neighborhoods. Specialized property management for Estrella Mountain Ranch, Palm Valley, and all Goodyear communities. Trusted by 450+ property owners who value proven, reliable service.
         </p>
@@ -56,7 +56,7 @@ Regular interior and exterior inspections to protect your investment and keep te
             </picture>
             <h2 class="cs-title">Expert Leasing & Tenant Screening</h2>
             <p class="cs-text">
-We market your rental on over 50 websites, screen tenants thoroughly, and handle all leasing paperwork. Our average time to lease is 30 days.
+We market your rental on over 50 websites, screen tenants thoroughly, and handle all leasing paperwork. Our average time to lease is 30 days. 
             </p>
         </li>
         <li class="cs-item">
@@ -362,5 +362,8 @@ Goodyear's established communities like Estrella Mountain Ranch and Palm Valley 
         </ul>
     </div>
 </section>
+
+<!-- Include cross-linking section -->
+{% include "components/property-management-crosslinks.html" %}
                                                                         
 {% endblock %}
