Add Google Ads conversion tracking: Book appointment click tracking and form submission tracking

--- a/src/content/pages/submission-complete.html
+++ b/src/content/pages/submission-complete.html
@@ -11,6 +11,12 @@ eleventyNavigation:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/submission-complete.css">
+    
+    <!-- Google Ads conversion tracking: Submit lead form (Page load) -->
+    <!-- TODO: Replace 'YOUR_CONVERSION_LABEL_HERE' with the actual conversion label from Google Ads -->
+    <script>
+      gtag('event', 'conversion', {'send_to': 'AW-1025883070/YOUR_CONVERSION_LABEL_HERE'});
+    </script>
 {% endblock %}
 
 {% block body %}
