--- a/src/content/pages/avondale-property-management.html
+++ b/src/content/pages/avondale-property-management.html
@@ -56,7 +56,7 @@ permalink: 'avondale-property-management/'
         <p class="cs-text">
 Full-service leasing, thorough inspections, and responsive local experts for your Avondale rental property. Trusted by 450+ property owners in the West Valley.
         </p>
-        <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
+        <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid" onclick="gtag_report_conversion();">Schedule A Phone Call</a>
     </div>
 
     <!-- Background Image -->
