Move breadcrumbs inside hero section, show only on mobile/tablet, change 'Property Management' to 'About'

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -19,6 +19,9 @@ permalink: 'goodyear-property-management/'
 <!-- ============================================ -->
 
 <section id="hero-81">
+    <!-- Include breadcrumbs -->
+    {% include "components/property-management-breadcrumbs.html" %}
+    
     <div class="cs-container">
         <h1 class="cs-title">Goodyear Property Management | Expert Local Managers | 28+ Years of Experience</h1>
         <p class="cs-text">
