Fix schema validation errors and improve SEO: Add worstRating to review schemas, fix trailing comma in Organization schema, hide sitemap links, fix broken image

--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -37,10 +37,10 @@ eleventyNavigation:
         <div class="cs-image-group">
             <picture class="cs-background">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/sitemap.webp">
+                <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/sitemap.webp">
-                <img loading="lazy" decoding="async" src="/assets/images/sitemap.webp" alt="sitemap" width="522" height="540">
+                <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/cabinets2.webp" alt="sitemap" width="522" height="540">
             </picture>
         </div>
         <div class="cs-content">
@@ -51,7 +51,7 @@ eleventyNavigation:
                 <li><a href="/contact">Ask a Property Management Question</a></li>
                 <li><a href="/avondale-property-management/">Avondale, AZ</a></li>
                 <li><a href="/buckeye-property-management/">Buckeye, AZ</a></li>
-                <li><a href="#">Buy A Home</a></li>
+                <li class="hidden-link"><a href="#">Buy A Home</a></li>
                 <li><a href="/chandler-property-management/">Chandler, AZ</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                 <li><a href="/rentals">Current Rentals</a></li>
@@ -69,7 +69,7 @@ eleventyNavigation:
                 <li><a href="/reviews">Reviews</a></li>
                 <li><a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank">Reviews on Google!</a></li>
                 <li><a href="https://calendly.com/sunseeker-rentals/property-management-call?month=2025-04" target="_blank">Schedule a phone call</a></li>
-                <li><a href="#">Sell Your Home</a></li>
+                <li class="hidden-link"><a href="#">Sell Your Home</a></li>
                 <li><a href="/surprise-property-management/">Surprise, AZ</a></li>
                 <li><a href="/tempe-property-management/">Tempe, AZ</a></li>
                 <li><a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank">Tenant Portal</a></li>
