--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -51,7 +51,7 @@ eleventyNavigation:
                 <li><a href="/contact">Ask a Property Management Question</a></li>
                 <li><a href="/avondale-property-management/">Avondale, AZ</a></li>
                 <li><a href="/buckeye-property-management/">Buckeye, AZ</a></li>
-                <li class="hidden-link"><a href="#">Buy A Home</a></li>
+               <!--  <li class="hidden-link"><a href="#">Buy A Home</a></li>-->
                 <li><a href="/chandler-property-management/">Chandler, AZ</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                 <li><a href="/rentals">Current Rentals</a></li>
@@ -69,7 +69,7 @@ eleventyNavigation:
                 <li><a href="/reviews">Reviews</a></li>
                 <li><a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank">Reviews on Google!</a></li>
                 <li><a href="https://calendly.com/sunseeker-rentals/property-management-call?month=2025-04" target="_blank">Schedule a phone call</a></li>
-                <li class="hidden-link"><a href="#">Sell Your Home</a></li>
+          <!--       <li class="hidden-link"><a href="#">Sell Your Home</a></li>-->
                 <li><a href="/surprise-property-management/">Surprise, AZ</a></li>
                 <li><a href="/tempe-property-management/">Tempe, AZ</a></li>
                 <li><a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank">Tenant Portal</a></li>
