Fix Ads conversion tracking for Surprise leads
Track Calendly CTA clicks on the Surprise landing page and make the lead-form conversion fire reliably by retrying until gtag is available. Also fire the lead conversion on successful form submission.

--- a/src/content/pages/submission-complete.html
+++ b/src/content/pages/submission-complete.html
@@ -14,7 +14,21 @@ eleventyNavigation:
     
     <!-- Google Ads conversion tracking: Submit lead form (Page load) -->
     <script>
-      gtag('event', 'conversion', {'send_to': 'AW-1025883070/H2quCND_5-MbEL73lukD'});
+      (function reportLeadConversion(attempt) {
+        try {
+          if (typeof window.gtag === 'function') {
+            window.gtag('event', 'conversion', { 'send_to': 'AW-1025883070/H2quCND_5-MbEL73lukD' });
+            return;
+          }
+        } catch (e) {
+          // ignore
+        }
+
+        // gtag is loaded async in the base layout; retry briefly.
+        if (attempt < 10) {
+          setTimeout(function () { reportLeadConversion(attempt + 1); }, 300);
+        }
+      })(0);
     </script>
 {% endblock %}
 
